// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constructNewLiveOrder 1`] = `
Object {
  "account": "makerAddress",
  "amount": 1.23e-16,
  "currentSequence": 0,
  "initialSequence": 0,
  "orderHash": "0xOrderHash",
  "pair": "pair",
  "price": 0.26973684,
  "side": "bid",
}
`;

exports[`constructNewLiveOrder 2`] = `
Object {
  "account": "makerAddress",
  "amount": 4.56e-16,
  "currentSequence": 0,
  "initialSequence": 0,
  "orderHash": "0xOrderHash",
  "pair": "pair",
  "price": 3.70731707,
  "side": "ask",
}
`;

exports[`getLiveOrderInPersistence in add queue 1`] = `"test"`;

exports[`getLiveOrderInPersistence only in db 1`] = `
Object {
  "liveOrder": "test",
}
`;

exports[`parseSignedOrder 1`] = `
Object {
  "exchangeAddress": "exchangeAddress",
  "expirationTimeSeconds": "1234567890",
  "feeRecipientAddress": "feeRecipientAddress",
  "makerAddress": "makerAddress",
  "makerAssetAmount": "123",
  "makerAssetData": "makerAssetData",
  "makerFee": "0",
  "salt": "789",
  "senderAddress": "senderAddress",
  "signature": "signature",
  "takerAddress": "takerAddress",
  "takerAssetAmount": "456",
  "takerAssetData": "takerAssetData",
  "takerFee": "0",
}
`;

exports[`persistOrder 1`] = `
Array [
  Array [
    "orders",
    "0xOrderHash",
    "{\\"method\\":\\"method\\",\\"liveOrder\\":{\\"orderHash\\":\\"0xOrderHash\\"},\\"signedOrder\\":\\"may or may not exist\\"}",
  ],
]
`;

exports[`persistOrder 2`] = `
Array [
  Array [
    "orders",
    "0xOrderHash",
  ],
]
`;

exports[`persistOrder 3`] = `
Array [
  Array [
    Object {
      "orderHash": "0xOrderHash",
    },
    "method",
    "confirmed",
    "relayer",
  ],
]
`;

exports[`processOrderQueue add/update 1`] = `
Array [
  Array [
    Object {
      "orderHash": "0xOrderHash",
      "signedOrder": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
    },
  ],
]
`;

exports[`processOrderQueue add/update 2`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "currentSequence": 2,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
  ],
]
`;

exports[`processOrderQueue add/update 3`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "currentSequence": 2,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
    "add",
    "confirmed",
    "orderProcessor",
  ],
]
`;

exports[`processOrderQueue add/update 4`] = `
Array [
  Array [
    "orders",
    "0xOrderHash",
  ],
]
`;

exports[`processOrderQueue cancel 1`] = `
Array [
  Array [
    "0xOrderHash",
  ],
]
`;

exports[`processOrderQueue cancel 2`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "currentSequence": 2,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
  ],
]
`;

exports[`processOrderQueue cancel 3`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "currentSequence": 2,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
    "cancel",
    "confirmed",
    "orderProcessor",
  ],
]
`;

exports[`processOrderQueue cancel 4`] = `
Array [
  Array [
    "orders",
    "0xOrderHash",
  ],
]
`;

exports[`processOrderQueue empty queue 1`] = `
Array [
  Array [
    "orders",
  ],
]
`;

exports[`processOrderQueue in queue but no key value 1`] = `
Array [
  Array [
    "orders",
    "0xOrderHash",
  ],
]
`;
